Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23358

main.upgrade_MDEV-19650 fails with result difference

    XMLWordPrintable

Details

    Description

      The test main.upgrade_MDEV-19560 fails with a result difference after a merge from 10.3 66ec3a770f7854f500ece66c78f3c87c9cd6da15:

      CURRENT_TEST: main.upgrade_MDEV-19650
      --- /mariadb/10.4/mysql-test/main/upgrade_MDEV-19650.result	2020-07-31 14:24:17.304978248 +0300
      +++ /mariadb/10.4/mysql-test/main/upgrade_MDEV-19650.reject	2020-07-31 17:25:27.973255284 +0300
      @@ -165,6 +165,7 @@
       SELECT * FROM information_schema.TABLE_PRIVILEGES WHERE GRANTEE="'mariadb.sys'@'localhost'";
       GRANTEE	TABLE_CATALOG	TABLE_SCHEMA	TABLE_NAME	PRIVILEGE_TYPE	IS_GRANTABLE
       'mariadb.sys'@'localhost'	def	mysql	global_priv	SELECT	NO
      +'mariadb.sys'@'localhost'	def	mysql	global_priv	UPDATE	NO
       'mariadb.sys'@'localhost'	def	mysql	global_priv	DELETE	NO
       # check non root
       CREATE USER 'not_root'@'localhost';
       
      mysqltest: Result length mismatch
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            marko Marko Mäkelä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.